# SYNTEXIS

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: dataset.json
scripts/: run_all.sh  run_minitest.sh
src/: config.py  main.py  run_analysis.py
src/analysis/: faa_analyzer.py  pss_analyzer.py
src/pipeline/: model_evaluation.py
src/utils/: data_utils.py  model_utils.py
